# couchbase-php-client

./: .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  .gitmodules  .php-cs-fixer.cache  .phpunit.result.cache  90-couchbase.ini  CMakeLists.txt  CONTRIBUTING.md  MIGRATION_FROM_3_x.md  Makefile.frag  README.md  WINDOWS.md  compile_commands.json  composer.json  config.m4  config.w32  package.xml  package.xml.in  phpcs.xml
Couchbase/: AnalyticsMetaData.php  AnalyticsMetrics.php  AnalyticsOptions.php  AnalyticsResult.php  AnalyticsScanConsistency.php  AnalyticsWarning.php  AppTelemetryConfiguration.php  AppendOptions.php  Authenticator.php  BinaryCollection.php  BinaryCollectionInterface.php  BooleanFieldSearchQuery.php  BooleanSearchQuery.php  Bucket.php  BucketInterface.php  CertificateAuthenticator.php  Cluster.php  ClusterInterface.php  ClusterOptions.php  ClusterRegistry.php  Collection.php  CollectionInterface.php  ConfigProfile.php  ConfigProfiles.php  ConjunctionSearchQuery.php  Coordinate.php  CounterResult.php  DateRangeFacetResult.php  DateRangeSearchFacet.php  DateRangeSearchQuery.php  DecrementOptions.php  DesignDocumentNamespace.php  DevelopmentProfile.php  DisjunctionSearchQuery.php  DocIdSearchQuery.php  DurabilityLevel.php  ExistsOptions.php  ExistsResult.php  ExtensionNamespaceResolver.php  ForkEvent.php  (+158 more)
src/: .clang-tidy  .cmake-format.yaml  CMakeLists.txt  php_couchbase.cxx  php_couchbase.hxx
src/Couchbase/: Integration.php
src/Couchbase/Datastructures/: CouchbaseList.php  CouchbaseMap.php  CouchbaseQueue.php  CouchbaseSet.php
src/Couchbase/Datastructures/Options/: CouchbaseList.php  CouchbaseMap.php  CouchbaseQueue.php  CouchbaseSet.php
src/Couchbase/Protostellar/: BinaryCollection.php  Bucket.php  Cluster.php  Collection.php  ProtostellarOperationRunner.php  ProtostellarRequest.php  RequestBehaviour.php  Scope.php
src/Couchbase/Protostellar/Internal/: AnalyticsRequestConverter.php  BucketManagementConverter.php  BucketManagementRequestConverter.php  BucketManagementResponseConverter.php  Client.php  ClientOptions.php  CollectionManagementConverter.php  CollectionManagementRequestConverter.php  CollectionManagementResponseConverter.php  ExceptionConverter.php  KVConverter.php  KVRequestConverter.php  KVResponseConverter.php  QueryConverter.php  QueryIndexManagementConverter.php  QueryIndexManagementRequestConverter.php  QueryIndexManagementResponseConverter.php  QueryRequestConverter.php  QueryResponseConverter.php  SearchConverter.php  SearchIndexManagementRequestConverter.php  SearchIndexManagementResponseConverter.php  SearchRequestConverter.php  SearchResponseConverter.php  SharedUtils.php
src/Couchbase/Protostellar/Management/: BucketManager.php  CollectionManager.php  CollectionQueryIndexManager.php  QueryIndexManager.php  SearchIndexManager.php
src/Couchbase/Protostellar/Retries/: BackoffCalculator.php  ExponentialBackoff.php  RetryAction.php  RetryOrchestrator.php  RetryReason.php  RetryStrategy.php
src/Couchbase/StellarNebula/: AppendOptions.php  BinaryCollection.php  Bucket.php  Cluster.php  ClusterOptions.php  Collection.php  CounterResult.php  DecodingFailureException.php  DecrementOptions.php  DocumentCompressionType.php  DocumentContentType.php  DurabilityLevel.php  ExistsOptions.php  ExistsResult.php  GetAllReplicasOptions.php  GetAndLockOptions.php  GetAndTouchOptions.php  GetAnyReplicaOptions.php  GetOptions.php  GetReplicaResult.php  GetResult.php  IncrementOptions.php  InsertOptions.php  JsonTranscoder.php  LookupCountSpec.php  LookupExistsSpec.php  LookupGetFullSpec.php  LookupGetSpec.php  LookupInOptions.php  LookupInResult.php  LookupInSpec.php  MutateArrayAddUniqueSpec.php  MutateArrayAppendSpec.php  MutateArrayInsertSpec.php  MutateArrayPrependSpec.php  MutateCounterSpec.php  MutateInOptions.php  MutateInResult.php  MutateInSpec.php  MutateInsertSpec.php  (+30 more)
src/Couchbase/StellarNebula/Internal/: Client.php  ClientOptions.php  KVConverter.php  QueryConverter.php
src/GPBMetadata/Couchbase/: AnalyticsV1.php  KvV1.php  QueryV1.php  RoutingV1.php  SearchV1.php  TransactionsV1.php  ViewV1.php
src/GPBMetadata/Couchbase/Admin/: BucketV1.php  CollectionV1.php
src/GPBMetadata/Couchbase/Admin/Bucket/V1/: Bucket.php
src/GPBMetadata/Couchbase/Admin/Collection/V1/: Collection.php
src/GPBMetadata/Couchbase/Admin/Query/V1/: Query.php
src/GPBMetadata/Couchbase/Admin/Search/V1/: Search.php
src/GPBMetadata/Couchbase/Admin/Searchindex/V1/: Searchindex.php
src/GPBMetadata/Couchbase/Analytics/V1/: Analytics.php
src/GPBMetadata/Couchbase/Internal/: HealthV1.php  HooksV1.php
src/GPBMetadata/Couchbase/Internal/Hooks/V1/: Hooks.php
src/GPBMetadata/Couchbase/Kv/V1/: Kv.php
src/GPBMetadata/Couchbase/Query/V1/: Query.php
src/GPBMetadata/Couchbase/Routing/V1/: Routing.php
src/GPBMetadata/Couchbase/Search/V1/: Search.php
src/GPBMetadata/Couchbase/Transactions/V1/: Transactions.php
src/GPBMetadata/Couchbase/View/V1/: View.php
src/cmake/: .gitignore  ext_build_version.hxx.in
src/core/: api_visibility.hxx  common.cxx  common.hxx  connection_handle.cxx  connection_handle.hxx  conversion_utilites.cxx  conversion_utilities.cxx  conversion_utilities.hxx  core.hxx  core_error_info.hxx  logger.cxx  logger.hxx  persistent_connections_cache.cxx  persistent_connections_cache.hxx  php_7_api_layer.hxx  transaction_context_resource.cxx  transaction_context_resource.hxx  transactions_resource.cxx  transactions_resource.hxx  version.cxx  version.hxx
src/wrapper/: common.cxx  common.hxx  connection_handle.cxx  connection_handle.hxx  conversion_utilities.cxx  conversion_utilities.hxx  core_error_info.hxx  core_span_resource.cxx  core_span_resource.hxx  logger.cxx  logger.hxx  passthrough_transcoder.hxx  persistent_connections_cache.cxx  persistent_connections_cache.hxx  php_7_api_layer.hxx  scan_result_resource.cxx  scan_result_resource.hxx  transaction_context_resource.cxx  transaction_context_resource.hxx  transactions_resource.cxx  transactions_resource.hxx  version.cxx  version.hxx  wrapper.hxx
(+374 files in other folders)
